# heymaa_new

./: .gitignore  App.tsx  backup.ps1  patch4.py  pyproject.toml  requirements.txt  vercel.json
Cloudflare Demo/: heymaa_DEMO_TEST PERIOD.html
Clouflare Heymaa/: heymaa_DEMO_TEST PERIOD.html  index.html
admin/: README.md  index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  admin.css  main.tsx
api/: index.py
backend/: .env.example  admin.html  chat_prompt_defaults.py  ingest_pdf.py  ingest_text.py  ingest_v2 .py  ingest_v2.py  main.py  rag_ingest.py  test_rag.py  test_rag_v2 .py  test_rag_v2.py  viva_checkout.py
backend/migrations/: activity_log.sql  add_offer_promotion_images.sql  chat_prompt_settings.sql  content_user_id.sql  invite_codes_manage_policies.sql  invite_codes_rls_policies.sql  is_deleted_soft_delete.sql  offer_news_rls_policies.sql  offers_rls_policies.sql  profiles_auth_user_id.sql  profiles_signup_consents.sql  promotions_id_to_uuid.sql  promotions_rls_policies.sql  public_active_offers_promotions_rpc.sql  rag_sources_rls_policies.sql  regions.sql  regions_fix_offer_id_uuid.sql  regions_public_rpc.sql  regions_rls_policies.sql  rename_admin_messages_to_offer_news.sql  rename_offer_news_to_offers.sql  storage_buckets_rls_policies.sql  user_activity_log.sql  user_data_auth_user_id.sql  user_levels.sql  (+8 more)
docs/: ARCHITECTURE_DECISIONS.md
frontend/: .env.development  package-lock.json  package.json  tsconfig.json
scripts/: import_memories_from_booklet_html.py  merge-vercel-build.mjs  recover_memories_from_browser.py
(+81 files in other folders)
