[project]
name = "heymaa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic==0.111.0",
  "edge-tts==7.2.8",
  "fastapi==0.128.8",
  "google-generativeai==0.8.6",
  "groq==1.0.0",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.20",
  "requests==2.32.5",
  "resend==2.32.2",
  "supabase==2.31.0",
  "uvicorn==0.39.0",
]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.vercel.scripts]
build = "npm install --prefix frontend && npm install --prefix admin && npm run build --prefix frontend && npm run build --prefix admin && node scripts/merge-vercel-build.mjs"
